custom theme for alignment tool and fix bug

--- a/src/pages/Learning/Forum/Thread.less
+++ b/src/pages/Learning/Forum/Thread.less
@@ -109,6 +109,7 @@
         }
         .yourAnswer {
             margin-top: 50px;
+            position: relative;
         }
     }
     .beginAnswers {
